V 3 of Angular App using Bootstrap

--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -6,9 +6,17 @@ input{
 }
 .liButton{
     margin: 5px;
+    padding: 10px;
 }
 button{
     margin: 5px;
     padding: 3px;
     
+}
+h1 , h2 {
+    color: grey;
+}
+lis{
+    margin: 12px;
+    padding: 12px;
 }
